# servicenow-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  dist-workspace.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/: sn.md
.github/: dependabot.yml
.github/workflows/: mask-check.yml  mask-forensics.yml  output-mask-probe.yml  release-guard.yml  release.yml  security.yml
.playwright-mcp/: page-2026-07-08T00-07-31-067Z.yml  page-2026-07-08T00-07-38-931Z.yml
docs/: agent-guide.md
docs/superpowers/plans/: 2026-04-22-sn-cli-v1-implementation.md
docs/superpowers/specs/: 2026-04-22-sn-cli-table-api-design.md
skills/sn/: SKILL.md
src/: amb.rs  body.rs  client.rs  config.rs  lib.rs  main.rs  oauth.rs  observability.rs  output_table.rs
src/cli/: aggregate.rs  app.rs  atf.rs  attachment.rs  auth.rs  catalog.rs  change.rs  cmdb.rs  completion.rs  identify.rs  import.rs  init.rs  introspect.rs  mod.rs  open_record.rs  ping.rs  profile.rs  progress.rs  raw.rs  schema.rs  scores.rs  table.rs  update_set.rs  user.rs  watch.rs
tests/: auth.rs  auth_cli.rs  cicd.rs  delete_guards.rs  env_var_isolation.rs  init.rs  introspect.rs  live_dev380385.rs  new_apis.rs  oauth.rs  oauth_authcode.rs  oauth_loopback.rs  oauth_refresh.rs  open_url.rs  pagination.rs  profile_add.rs  profile_cmd.rs  profile_resolution.rs  proxy_tls.rs  schema.rs  table_create.rs  table_delete.rs  table_get.rs  table_list.rs  table_write.rs  usage_errors.rs  verbosity_redaction.rs  watch.rs
tests/common/: mod.rs
wix/: main.wxs
