[package]
name = "sn"
version = "0.10.0"
authors = ["Abey Ahmad <ibrahimsafah@gmail.com>"]
edition = "2021"
rust-version = "1.75"
description = "Agent-forward CLI for ServiceNow — Table, Change, CMDB, Attachment, Catalog, Import, CICD, and more"
license = "MIT"
repository = "https://github.com/tehubersheezy/servicenow-cli"
homepage = "https://github.com/tehubersheezy/servicenow-cli"
default-run = "sn"

[package.metadata.wix]
upgrade-guid = "009F6DF0-FC61-47AF-B5B4-006E347A6138"
path-guid = "364321C0-786E-4750-B4AF-6A183DB724FF"
license = false
eula = false

[lib]
name = "sn"
path = "src/lib.rs"

[[bin]]
name = "sn"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "suggestions", "wrap_help"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
directories = "5"
rpassword = "7"
thiserror = "1"
is-terminal = "0.4"
clap_complete = "4"
webbrowser = "1"
comfy-table = "7"
base64 = "0.22"
sha2 = "0.10"
getrandom = "0.2"
# Blocking WebSocket for the AMB record watcher. Deliberately *not*
# tokio-tungstenite: Bayeux's /meta/connect is a long-poll, not a heartbeat, so
# the watcher is a single sequential read loop and needs no async runtime.
# webpki roots to match reqwest's `rustls-tls` trust store.
tungstenite = { version = "0.30", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"] }
ctrlc = "3"
# The websocket opens its own TLS connection, so --insecure/--ca-cert have to be
# honored here too. `ring` (not the aws-lc-rs default) because that is the
# provider reqwest already links — a second crypto backend in one binary is pure
# cost.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
# PEM parsing comes from pki-types' own `PemObject`, not the `rustls-pemfile`
# wrapper — that crate is archived and unmaintained (RUSTSEC-2025-0134), and it
# was only ever a thin shim over this same code.
rustls-pki-types = { version = "1", features = ["std"] }
webpki-roots = "1"

[dev-dependencies]
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serial_test = "3"
tokio = { version = "1", features = ["rt", "macros"] }

[profile.release]
strip = true
lto = "thin"
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
